# jsonrpcpp

./: .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  json.hpp  jsonrp.cpp  jsonrp.hpp  jsonrpc.cpp  jsonrpc.h  jsonrpcpp_example.cpp  jsonrpctest.cpp
.github/workflows/: build.yml  ci.yml  ubuntu.yml
cmake/: jsonrpcpp.pc.cmake
example/: CMakeLists.txt  jsonrpcpp_example.cpp
include/: jsonrpcpp.hpp
lib/: jsonrp.cpp  jsonrp.hpp
test/: CMakeLists.txt  test_main.cpp
